--- a/resources/assets/sass/layout/nav.sass
+++ b/resources/assets/sass/layout/nav.sass
@@ -46,7 +46,6 @@
             animation-delay: .7s
 
 .header__nav
-  margin-left: -25px;
   @include mobile
     width: 100%
 
